// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu render renders transformed items 1`] = `
{
  "canToggleShowMore": false,
  "createURL": [Function],
  "cssClasses": {
    "count": "ais-Menu-count",
    "disabledShowMore": "ais-Menu-showMore--disabled",
    "item": "ais-Menu-item",
    "label": "ais-Menu-label",
    "link": "ais-Menu-link",
    "list": "ais-Menu-list",
    "noRefinementRoot": "ais-Menu--noRefinement",
    "root": "ais-Menu",
    "selectedItem": "ais-Menu-item--selected",
    "showMore": "ais-Menu-showMore",
  },
  "depth": 0,
  "facetValues": [
    {
      "count": 456,
      "data": null,
      "exhaustive": true,
      "isRefined": false,
      "label": "bar",
      "transformed": true,
      "url": "#",
      "value": "bar",
    },
    {
      "count": 123,
      "data": null,
      "exhaustive": true,
      "isRefined": false,
      "label": "foo",
      "transformed": true,
      "url": "#",
      "value": "foo",
    },
  ],
  "isShowingMore": false,
  "showMore": undefined,
  "showMoreCount": 0,
  "templateProps": {
    "templates": {
      "item": [Function],
      "showMoreText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "item": false,
      "showMoreText": false,
    },
  },
  "toggleRefinement": [Function],
  "toggleShowMore": [Function],
}
`;

exports[`menu render snapshot 1`] = `
{
  "canToggleShowMore": false,
  "createURL": [Function],
  "cssClasses": {
    "count": "ais-Menu-count",
    "disabledShowMore": "ais-Menu-showMore--disabled",
    "item": "ais-Menu-item",
    "label": "ais-Menu-label",
    "link": "ais-Menu-link",
    "list": "ais-Menu-list",
    "noRefinementRoot": "ais-Menu--noRefinement",
    "root": "ais-Menu",
    "selectedItem": "ais-Menu-item--selected",
    "showMore": "ais-Menu-showMore",
  },
  "depth": 0,
  "facetValues": [
    {
      "count": 456,
      "data": null,
      "exhaustive": true,
      "isRefined": false,
      "label": "bar",
      "url": "#",
      "value": "bar",
    },
    {
      "count": 123,
      "data": null,
      "exhaustive": true,
      "isRefined": false,
      "label": "foo",
      "url": "#",
      "value": "foo",
    },
  ],
  "isShowingMore": false,
  "showMore": undefined,
  "showMoreCount": 0,
  "templateProps": {
    "templates": {
      "item": [Function],
      "showMoreText": [Function],
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "item": false,
      "showMoreText": false,
    },
  },
  "toggleRefinement": [Function],
  "toggleShowMore": [Function],
}
`;
